// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`converts execution definition to AFM Execution > AFM Execution with definition that has no filter 1`] = `
{
  "execution": {
    "afm": {},
    "resultSpec": {},
  },
}
`;

exports[`converts execution definition to AFM Execution > AFM Execution with definition that has one attribute with alias and one attribute without localId 1`] = `
{
  "execution": {
    "afm": {
      "attributes": [
        {
          "alias": "alias",
          "displayForm": {
            "identifier": "attribute1",
          },
          "localIdentifier": "a_724874d1_attribute1",
        },
        {
          "displayForm": {
            "identifier": "attribute2",
          },
          "localIdentifier": "a_attribute2",
        },
      ],
    },
    "resultSpec": {},
  },
}
`;

exports[`converts execution definition to AFM Execution > AFM Execution with definition with filters 1`] = `
{
  "execution": {
    "afm": {
      "attributes": [
        {
          "displayForm": {
            "identifier": "label.f_account.account.name",
          },
          "localIdentifier": "a_label.f_account.account.name",
        },
        {
          "displayForm": {
            "identifier": "label.f_activity.subject",
          },
          "localIdentifier": "a_label.f_activity.subject",
        },
      ],
      "filters": [
        {
          "positiveAttributeFilter": {
            "displayForm": {
              "identifier": "label.f_account.account.name",
            },
            "in": {
              "values": [
                "myAccount",
              ],
            },
          },
        },
      ],
      "measures": [
        {
          "definition": {
            "measure": {
              "item": {
                "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
              },
            },
          },
          "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
        },
      ],
    },
    "resultSpec": {},
  },
}
`;

exports[`converts execution definition to AFM Execution > AFM Execution with dimensions 1`] = `
{
  "execution": {
    "afm": {},
    "resultSpec": {
      "dimensions": [
        {
          "itemIdentifiers": [
            "localId1",
          ],
        },
      ],
    },
  },
}
`;

exports[`converts execution definition to AFM Execution > AFM Execution with dimensions with native grand totals for columns 1`] = `
{
  "execution": {
    "afm": {
      "attributes": [
        {
          "displayForm": {
            "identifier": "attr.f_activity.activity",
          },
          "localIdentifier": "a_attr.f_activity.activity",
        },
        {
          "displayForm": {
            "identifier": "label.f_account.account.name",
          },
          "localIdentifier": "a_label.f_account.account.name",
        },
        {
          "displayForm": {
            "identifier": "f_owner.department_id",
          },
          "localIdentifier": "a_f_owner.department_id",
        },
      ],
      "measures": [
        {
          "definition": {
            "measure": {
              "item": {
                "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
              },
            },
          },
          "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
        },
        {
          "definition": {
            "measure": {
              "item": {
                "identifier": "973a14c4-acb1-45fb-ba52-5d96fa02f7ba",
              },
            },
          },
          "localIdentifier": "m_973a14c4_acb1_45fb_ba52_5d96fa02f7ba",
        },
      ],
      "nativeTotals": [
        {
          "attributeIdentifiers": [],
          "measureIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
        },
        {
          "attributeIdentifiers": [
            "a_label.f_account.account.name",
          ],
          "measureIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
        },
      ],
    },
    "resultSpec": {
      "dimensions": [
        {
          "itemIdentifiers": [
            "a_label.f_account.account.name",
          ],
          "totals": [
            {
              "attributeIdentifier": "a_label.f_account.account.name",
              "measureIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
              "type": "nat",
            },
          ],
        },
        {
          "itemIdentifiers": [
            "a_f_owner.department_id",
            "measureGroup",
          ],
          "totals": [
            {
              "attributeIdentifier": "a_f_owner.department_id",
              "measureIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
              "type": "nat",
            },
          ],
        },
      ],
    },
  },
}
`;

exports[`converts execution definition to AFM Execution > AFM Execution with dimensions with native sub totals for columns 1`] = `
{
  "execution": {
    "afm": {
      "attributes": [
        {
          "displayForm": {
            "identifier": "attr.f_activity.activity",
          },
          "localIdentifier": "a_attr.f_activity.activity",
        },
        {
          "displayForm": {
            "identifier": "label.f_account.account.name",
          },
          "localIdentifier": "a_label.f_account.account.name",
        },
        {
          "displayForm": {
            "identifier": "f_opportunitysnapshot.forecastcategory_id",
          },
          "localIdentifier": "a_f_opportunitysnapshot.forecastcategory_id",
        },
        {
          "displayForm": {
            "identifier": "f_owner.department_id",
          },
          "localIdentifier": "a_f_owner.department_id",
        },
        {
          "displayForm": {
            "identifier": "f_stage.isactive_id",
          },
          "localIdentifier": "a_f_stage.isactive_id",
        },
      ],
      "measures": [
        {
          "definition": {
            "measure": {
              "item": {
                "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
              },
            },
          },
          "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
        },
        {
          "definition": {
            "measure": {
              "item": {
                "identifier": "973a14c4-acb1-45fb-ba52-5d96fa02f7ba",
              },
            },
          },
          "localIdentifier": "m_973a14c4_acb1_45fb_ba52_5d96fa02f7ba",
        },
      ],
      "nativeTotals": [
        {
          "attributeIdentifiers": [
            "a_label.f_account.account.name",
          ],
          "measureIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
        },
        {
          "attributeIdentifiers": [
            "a_label.f_account.account.name",
            "a_f_opportunitysnapshot.forecastcategory_id",
            "a_f_owner.department_id",
          ],
          "measureIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
        },
      ],
    },
    "resultSpec": {
      "dimensions": [
        {
          "itemIdentifiers": [
            "a_label.f_account.account.name",
            "a_f_opportunitysnapshot.forecastcategory_id",
          ],
          "totals": [
            {
              "attributeIdentifier": "a_f_opportunitysnapshot.forecastcategory_id",
              "measureIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
              "type": "nat",
            },
          ],
        },
        {
          "itemIdentifiers": [
            "a_f_owner.department_id",
            "a_f_stage.isactive_id",
            "measureGroup",
          ],
          "totals": [
            {
              "attributeIdentifier": "a_f_stage.isactive_id",
              "measureIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
              "type": "nat",
            },
          ],
        },
      ],
    },
  },
}
`;

exports[`converts execution definition to AFM Execution > AFM Execution with dimensions with native totals and attribute is in bucket 1`] = `
{
  "execution": {
    "afm": {
      "attributes": [
        {
          "displayForm": {
            "identifier": "attr.f_activity.activity",
          },
          "localIdentifier": "a_attr.f_activity.activity",
        },
        {
          "displayForm": {
            "identifier": "label.f_account.account.name",
          },
          "localIdentifier": "a_label.f_account.account.name",
        },
      ],
      "measures": [
        {
          "definition": {
            "measure": {
              "item": {
                "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
              },
            },
          },
          "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
        },
        {
          "definition": {
            "measure": {
              "item": {
                "identifier": "973a14c4-acb1-45fb-ba52-5d96fa02f7ba",
              },
            },
          },
          "localIdentifier": "m_973a14c4_acb1_45fb_ba52_5d96fa02f7ba",
        },
      ],
      "nativeTotals": [
        {
          "attributeIdentifiers": [],
          "measureIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
        },
      ],
    },
    "resultSpec": {
      "dimensions": [
        {
          "itemIdentifiers": [
            "a_label.f_account.account.name",
          ],
        },
        {
          "itemIdentifiers": [
            "measureGroup",
          ],
          "totals": [
            {
              "attributeIdentifier": "a_label.f_account.account.name",
              "measureIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
              "type": "nat",
            },
          ],
        },
      ],
    },
  },
}
`;

exports[`converts execution definition to AFM Execution > AFM Execution with empty definition 1`] = `
{
  "execution": {
    "afm": {},
    "resultSpec": {},
  },
}
`;

exports[`converts execution definition to AFM Execution > AFM Execution with sorts 1`] = `
{
  "execution": {
    "afm": {},
    "resultSpec": {
      "sorts": [
        {
          "attributeSortItem": {
            "attributeIdentifier": "a_label.f_account.account.name",
            "direction": "asc",
          },
        },
      ],
    },
  },
}
`;

exports[`converts execution definition to AFM Execution > should remove empty negative filters and not cause RAIL-2083 1`] = `
[
  {
    "positiveAttributeFilter": {
      "displayForm": {
        "identifier": "label.f_product.product.name",
      },
      "in": {
        "values": [],
      },
    },
  },
  {
    "positiveAttributeFilter": {
      "displayForm": {
        "identifier": "label.f_product.product.name",
      },
      "in": {
        "values": [
          "value 1",
        ],
      },
    },
  },
  {
    "negativeAttributeFilter": {
      "displayForm": {
        "identifier": "label.f_product.product.name",
      },
      "notIn": {
        "values": [
          "value 2",
        ],
      },
    },
  },
]
`;

exports[`converts execution definition to AFM Execution > throw error with dimensions with native totals but no attribute in bucket 1`] = `[Error: Native total references attribute that is not in any dimension: a_label.f_account.account.name]`;
